@@ -897,7 +897,7 @@
 
 <addon id="plugin.video.merdb"
        name="MerDB.cn"
-       version="0.3.6"
+       version="0.3.7"
        provider-name="The[COLOR tan]Highway[/COLOR]">
   <requires>
   	<import addon="xbmc.python" version="2.1.0"/>
@@ -911,11 +911,11 @@
   <extension point="xbmc.addon.metadata">
   	<summary>Play Videos @ MerDB.cn.</summary>
   	<description>Play Videos @ MerDB.cn.</description>
-  	<disclaimer lang="en">This Project is designed for xbmc v13.x originally and currently being kept up on one of the nightly xbmcc v13.x builds. It gets a slight bit of testing as I use it myself, a LOT, on a Windows 7 OS. Any other OS's / builds of xbmc have not be tested on yet, but I do feel free to try and test it out on them. Some parts of this addon may not be legal in your country of residence - please check with your local laws before installing. I take no responsibility for any problems this plugin might in any way, form, shape or size cause. This is project is for a LEARNING EXPERIANCE.</disclaimer>
+  	<disclaimer>By using this, you take reponsibility for anything that happens.  Some parts of this addon may not be legal in your country of residence - please check with your local laws before installing. I take no responsibility for any problems this plugin might in any way, form, shape or size cause. This is project is for a LEARNING EXPERIANCE.</disclaimer>
   	<language>en</language>
   	<platform>all</platform>
-  	<forum>http://www.xbmchub.com/forums/threads/17754-Release-MerDB-ru</forum>
-  	<website>http://www.xbmchub.com/</website>
+  	<forum>http://forums.tvaddons.ag/threads/17754-Release-MerDB-ru</forum>
+  	<website>http://www.tvaddons.ag/</website>
   </extension>
 </addon>
 
@@ -1124,25 +1124,23 @@
 
 <addon id="plugin.video.tbh.ilive"
        name="i[COLOR white]L[COLOR lime]i[/COLOR]VE[/COLOR]"
-       version="0.1.1"
+       version="0.1.2"
        provider-name="The[COLOR tan]Highway[/COLOR]">
   <requires>
   	<import addon="xbmc.python" version="2.1.0"/>
-  	<import addon="script.module.urlresolver" version="2.1.2"/>
-  	<import addon="script.module.metahandler" version="2.0.0"/>
-  	<import addon="script.module.addon.common" version="2.0.0"/>
+  	<import addon="script.module.addon.common" />
   </requires>
   <extension point="xbmc.python.pluginsource" library="liLiveTo.py">
   	<provides>video</provides>
   </extension>
   <extension point="xbmc.addon.metadata">
-  	<summary></summary>
-  	<description>Video Addon.  Graphics by TwiztedZero and TheHighway.</description>
-  	<disclaimer>This Project is developped for XBMC Gotham 13.0 RC1, designed for XBMC Gotham originally, with some mind given to Frodo 12.2/12.3. It gets a slight bit of testing as I use it myself, on a Windows 7 OS with whatever version of XBMC happens to be my main install at that time. Any other OS's / builds of XBMC have not be tested on yet, but do feel free to try and test it out on them. Some parts of this addon may not be legal in your country of residence - please check with your local laws before installing. I take no responsibility for any problems this plugin might in any way, form, shape or size cause. This is project is for a LEARNING EXPERIANCE.</disclaimer>
+  	<summary>iLiVE Streams</summary>
+  	<description>Streaming Video Addon.  Graphics by TwiztedZero and TheHighway.</description>
+  	<disclaimer>By using this, you take reponsibility for anything that happens.  Some parts of this addon may not be legal in your country of residence - please check with your local laws before installing. I take no responsibility for any problems this plugin might in any way, form, shape or size cause. This is project is for a LEARNING EXPERIANCE.</disclaimer>
   	<language>en</language>
   	<platform>all</platform>
     <forum>http://www.xbmchub.com/forums/thehighways-xbmc-addons/</forum>
-    <website>http://www.xbmchub.com/</website>
+    <website>http://www.tvaddons.ag/</website>
     <source>https://github.com/HIGHWAY99/</source>
   </extension>
 </addon>
