@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="plugin.video.merdb"
        name="MerDB.cn"
-       version="0.3.6"
+       version="0.3.7"
        provider-name="The[COLOR tan]Highway[/COLOR]">
   <requires>
   	<import addon="xbmc.python" version="2.1.0"/>
@@ -15,10 +15,10 @@
   <extension point="xbmc.addon.metadata">
   	<summary>Play Videos @ MerDB.cn.</summary>
   	<description>Play Videos @ MerDB.cn.</description>
-  	<disclaimer lang="en">This Project is designed for xbmc v13.x originally and currently being kept up on one of the nightly xbmcc v13.x builds. It gets a slight bit of testing as I use it myself, a LOT, on a Windows 7 OS. Any other OS's / builds of xbmc have not be tested on yet, but I do feel free to try and test it out on them. Some parts of this addon may not be legal in your country of residence - please check with your local laws before installing. I take no responsibility for any problems this plugin might in any way, form, shape or size cause. This is project is for a LEARNING EXPERIANCE.</disclaimer>
+  	<disclaimer>By using this, you take reponsibility for anything that happens.  Some parts of this addon may not be legal in your country of residence - please check with your local laws before installing. I take no responsibility for any problems this plugin might in any way, form, shape or size cause. This is project is for a LEARNING EXPERIANCE.</disclaimer>
   	<language>en</language>
   	<platform>all</platform>
-  	<forum>http://www.xbmchub.com/forums/threads/17754-Release-MerDB-ru</forum>
-  	<website>http://www.xbmchub.com/</website>
+  	<forum>http://forums.tvaddons.ag/threads/17754-Release-MerDB-ru</forum>
+  	<website>http://www.tvaddons.ag/</website>
   </extension>
 </addon>
